[gd_scene load_steps=3 format=3 uid="uid://bcc2s36entt5e"]

[ext_resource type="Script" path="res://Scripts/team_display.gd" id="1_amqrg"]
[ext_resource type="PackedScene" uid="uid://bt7ex3w4yitj7" path="res://Scenes/UI/User Display.tscn" id="1_v3w5h"]

[node name="TeamDisplay" type="HBoxContainer"]
script = ExtResource("1_amqrg")

[node name="Player1" parent="." instance=ExtResource("1_v3w5h")]
layout_mode = 2

[node name="Player2" parent="." instance=ExtResource("1_v3w5h")]
layout_mode = 2

[node name="Player3" parent="." instance=ExtResource("1_v3w5h")]
layout_mode = 2
